# haskell-webapps

./: .gitignore  CONTRIBUTIONS.md  LICENSE  README.md  SPEC.md  json-api-spec.apib  json-api-spec.html
RelationalRecord/: ChangeLog.md  LICENSE  RelationalRecord.cabal  stack.yaml
RelationalRecord/db/: bootstrap.sql  schema.sql
RelationalRecord/src/: DBInterface.hs  DBRelations.hs  DataSource.hs  DefineTable.hs  DomainAPI.hs  Main.hs
RelationalRecord/src/Helpers/: DefineEnum.hs  JSONDiff.hs
RelationalRecord/src/Relations/: DB.hs  Role.hs  Tenant.hs  User.hs
RelationalRecord/src/Types/: AuditLog.hs  AuditLogs.hs  DB.hs  DefineTable.hs  Enum.hs  EnumDummy.hs  Enums.hs  Role.hs  Tenant.hs  TenantStatus.hs  User.hs  UserStatus.hs  UsersRoles.hs
ServantHDBC/: .gitignore  ServantHDBC.cabal  stack.yaml
ServantHDBC/src/: Config.hs  DomainApi.hs  Main.hs  RestApi.hs  Types.hs  Util.hs
ServantHDBC/src/Api/: Authentication.hs  Photo.hs  Product.hs  Tenant.hs
ServantHDBC/src/RestApi/: Authentication.hs  Photo.hs  Product.hs  Tenant.hs
ServantOpaleye/: CHANGELOG.md  DB.hs  DomainApi.hs  LICENSE.md  README.md  package.yaml  stack.yaml
ServantOpaleye/Domain/: Base.hs  BaseTypes.hs  Tenant.hs
ServantOpaleye/db/: generate_schema_spy.sh  schema.sql
ServantOpaleye/db/schema_spy/: anomalies.html  columns.byAuto.html  columns.byColumn.html  columns.byDefault.html  constraints.html  (+10 more)
ServantOpaleye/test-suite/: Main.hs
ServantOpaleye2/: ServantOpaleye2.cabal  stack.yaml
ServantOpaleye2/app/: Main.hs
ServantOpaleye2/appcore/: appcore.cabal  stack.yaml
ServantOpaleye2/appcore/src/: ApiBase.hs  AppCore.hs  Auditable.hs  AuditableTH.hs  Classes.hs  CryptoDef.hs  Helpers.hs  Ids.hs  InternalClasses.hs  InternalUtils.hs  Lenses.hs  OpaleyeDef.hs  Queries.hs  Utils.hs
ServantOpaleye2/appcore/src/DataTypes/: Authentication.hs
ServantOpaleye2/appcore/src/Role/: RoleDefs.hs
ServantOpaleye2/appcore/src/Tenant/: TenantDefs.hs
ServantOpaleye2/appcore/src/User/: UserDefs.hs
ServantOpaleye2/src/: App.hs  AppM.hs  Conf.hs.template  Email.hs  Exceptions.hs  JsonValidation.hs  RoleAPi.hs  TenantApi.hs  UserApi.hs  UserServices.hs  Utils.hs  Validations.hs
ServantOpaleye2/src/Endpoints/: Authentication.hs  Role.hs  Tenant.hs  User.hs
ServantOpaleye2/test/: AppSpec.hs
ServantPersistent/: ServantPersistent.cabal  stack.yaml
ServantPersistent/app/: Main.hs
ServantPersistent/src/: API.hs  Auth.hs  DBApi.hs  DBTypes.hs  DatabaseTypes.hs  Environ.hs  Models.hs  Operation.hs  Price.hs  ProductQuery.hs  Safe.hs  Server.hs  Types.hs  Updater.hs
ServantPersistent/src/Domain/: .#Product.hs  .#User.hs  Product.hs  Roles.hs  Tenant.hs  User.hs
SpockOpaleye/: SpockOpaleye.cabal  stack.yaml  tips.txt
SpockOpaleye/app/: Main.hs
SpockOpaleye/appcore/: appcore.cabal  stack.yaml
SpockOpaleye/appcore/src/: ApiBase.hs  AppCore.hs  AppM.hs  Classes.hs  CryptoDef.hs  Ids.hs  InternalUtils.hs  JsonInstances.hs  Lenses.hs  OpaleyeDef.hs  Utils.hs
SpockOpaleye/appcore/src/Role/: RoleApi.hs  RoleDefs.hs
SpockOpaleye/appcore/src/Tenant/: TenantApi.hs  TenantDefs.hs  TenantId.hs
SpockOpaleye/appcore/src/User/: UserApi.hs  UserDefs.hs  UserId.hs
SpockOpaleye/db/: bootstrap.sql  schema.sql
SpockOpaleye/email-templates/: tenant-activation-text.tpl  tenant-activation.tpl
SpockOpaleye/hs-airbrake/: .gitignore  .travis.yml  LICENSE  README.md  airbrake.cabal  default.nix  release.nix
SpockOpaleye/hs-airbrake/src/: Airbrake.hs
SpockOpaleye/hs-airbrake/src/Airbrake/: Credentials.hs  WebRequest.hs
SpockOpaleye/src/: ApiBase.hs  AppM.hs  AuditableTH.hs  Conf.hs.template  CryptoDef.hs  DataTypes.hs  DomainApi.hs  Email.hs  Exceptions.hs  JsonInstances.hs  Lenses.hs  Lib.hs  OpaleyeDef.hs  OpaleyeTypes.hs  RoleAPi.hs  Sendgrid.hs  TH.hs  TenantApi.hs  UserApi.hs  UserServices.hs  Utils.hs  Validations.hs
SpockOpaleye/src/Role/: RoleDefs.hs
SpockOpaleye/src/Tenant/: TenantDefs.hs
SpockOpaleye/src/User/: UserDefs.hs
UI/: comparison.org
UI/ReflexFRP/mockLoginPage/mockClient/: Main.hs  deploy.sh  mockLoginPage.cabal  stack-ghcjs.yaml  stack.yaml
UI/ReflexFRP/mockLoginPage/mockClient/assets/html/: index.html
UI/ReflexFRP/mockLoginPage/mockClient/js/: all.min.js  index.html  lib.js  out.stats  rts.js
UI/ReflexFRP/mockLoginPage/mockServer/: Main.hs  mockServer.cabal  stack.yaml
UI/ReflexFRP/mockUsersRoles/mockAPI/: mockAPI.cabal  stack.yaml
UI/ReflexFRP/mockUsersRoles/mockAPI/src/: ExRoles.hs  GenericStructure.hs  MockAPI.hs  Permissions.hs
UI/ReflexFRP/mockUsersRoles/mockAPI/src/MockAPI/: Permission.hs  Prelude.hs  RoleAttributes.hs  Roles.hs  Shaped.hs  User.hs
UI/ReflexFRP/mockUsersRoles/mockClient/: Main.hs  deploy.sh  mockLoginPage.cabal  stack-ghcjs.yaml  stack.yaml
UI/ReflexFRP/mockUsersRoles/mockClient/app/: Client.hs  Main.hs  Utils.hs
UI/ReflexFRP/mockUsersRoles/mockClient/app/Pages/: Common.hs  Edit.hs  Overview.hs  ProgressBar.hs
UI/ReflexFRP/mockUsersRoles/mockClient/assets/css/: Login-Form-Clean.css  styles.min.css
UI/ReflexFRP/mockUsersRoles/mockClient/assets/html/: index.html
UI/ReflexFRP/mockUsersRoles/mockClient/js/: all.min.js
UI/ReflexFRP/reflex-ui-elements/: reflex-ui-elements.cabal  stack-ghcjs.yaml  stack.yaml
UI/ReflexFRP/reflex-ui-elements/src/: UIElements.hs
UI/ReflexFRP/userValidation/: Main.hs  stack-ghcjs.yaml  stack.yaml  userValidation.cabal
benchmarks/: benchmarks.cabal  stack.yaml
benchmarks/app/: Main.hs
benchmarks/db/: schema.sql
benchmarks/src/: OpaleyeBm.hs  PersistenceBm.hs
doc/: .gitignore  Makefile  README.md  conf.py  db-mappings.md  index.rst  site.hs  ui-tutorial-structure.md
doc/_site/: about.html  archive.html  index.html
doc/_templates/: extrafooter.html  footer.html
doc/css/: default.css
doc/hakyll/: db-mappings.md  doc.cabal  index.html
doc/posts/: db-mappings-opaleye.markdown
skeleton/: skeleton.cabal
skeleton/src/: Import.hs
ui-mockups/: index.html  login.html  role-edit-with-errors.html  role-edit.html  roles.html  ui-mockups.bsdesign
ui-mockups/roles/: edit.html  index.html
(+120 files in other folders)
