name:                RelationalRecord
version:             0.1.0.0
synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Michael Karg
maintainer:          michaelkarg77@gmail.com
copyright:           VacationLabs
category:            Database, Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag Optimize
    description:    Enables an optimized build
    default:        False


executable RelationalRecord
    main-is:        Main.hs
    other-modules:  DataSource,
                    DefineTable
    build-depends:  base >=4.9 && <5,
                    template-haskell,
                    names-th,
                    relational-record >= 0.1.5.1,
                    relational-query-HDBC,
                    relational-query,
                    relational-schemas >= 0.1.3.2,
                    persistable-record,
                    HDBC-session,
                    HDBC,
                    HDBC-postgresql,
                    aeson >= 1.0.2,
                    aeson-pretty >= 0.8.2,
                    text,
                    unordered-containers,
                    vector,
                    data-default,
                    bytestring,
                    random,
                    time

    hs-source-dirs: src

    ghc-options:    -threaded -rtsopts -with-rtsopts=-N

    if flag(Optimize)
        ghc-options:    -O2 -funbox-strict-fields
    else
        ghc-options:    -Wall

    default-language: Haskell2010



source-repository head
  type:     git
  location: https://github.com/vacationlabs/haskell-webapps
