name:                ServantOpaleye2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ServantOpaleye2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AppM
                      ,Conf
                      ,Email
                      ,RoleApi
                      ,TenantApi
                      ,UserApi
                      ,UserServices
                      ,Validations
                      ,App
                      ,Utils
                      ,Exceptions
  build-depends:       base >= 4.7 && < 5
                       ,servant
                       ,servant-server
                       ,either
                       ,transformers
                       ,aeson
                       ,wai
                       ,warp
                       ,appcore
                       ,smtp-mail
                       ,lifted-base
                       ,airbrake
                       ,here
                       ,filepath
                       ,mime-mail >= 0.4.12
                       ,product-profunctors
                       ,profunctors
                       ,bytestring
                       ,opaleye
                       ,time
                       ,old-time
                       ,network
                       ,postgresql-simple
                       ,bcrypt
                       ,text
                       ,lens
                       ,mtl
                       ,transformers
                       ,time
                       ,vector
                       ,Spock >=0.11
                       ,aeson
                       ,unordered-containers
                       ,template-haskell
                       ,lifted-base
                       ,exceptions
  default-language:    Haskell2010

executable ServantOpaleye2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ServantOpaleye2
  default-language:    Haskell2010

test-suite ServantOpaleye2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ServantOpaleye2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ServantOpaleye2
