name:                ServantPersistent
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ServantPersistent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , Types
                     , Auth
                     , Server
                     , Environ
                     , Models
                     , Domain.Tenant
                     , Domain.User
                     , Domain.Product
                     , Domain.Roles
                     , Updater
                     , DBTypes
                     , Operation
                     , ProductQuery
                     , Price
  ghc-options:       -Wall -fno-warn-unticked-promoted-constructors
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , cereal
                     , containers
                     , data-default
                     , exceptions
                     , ghc-prim
                     , lens
                     , monad-control >= 1.0.1.0
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , random >= 1.1
                     , servant
                     , servant-auth-cookie
                     , servant-server
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
                     , wai
                     , warp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , StandaloneDeriving
                     , LambdaCase

executable ServantPersistent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       ServantPersistent
                     , base
                     , cryptonite
                     , data-default
                     , monad-control >= 1.0.1.0
                     , monad-logger
                     , persistent-postgresql
                     , random >= 1.1
                     , servant
                     , servant-auth-cookie
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite ServantPersistent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ServantPersistent
                     , base
                     , monad-control >= 1.0.1.0
                     , random >= 1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ServantPersistent
