name:                airbrake
version:             0.2.0.0
synopsis:            An Airbrake notifier for Haskell
description:         Airbrake notifier.
homepage:            https://github.com/joelteon/airbrake
license:             BSD3
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Airbrake, Airbrake.WebRequest, Airbrake.Credentials
  other-modules:       Paths_airbrake
  build-depends:       base == 4.*
                     , blaze-markup
                     , bytestring
                     , directory
                     , exceptions
                     , filepath
                     , http-conduit
                     , monad-control
                     , network >= 2.6
                     , network-uri
                     , semigroups
                     , template-haskell
                     , text
                     , transformers
                     , utf8-string
                     , wai
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
