name:                reflex-ui-elements
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UIElements
  build-depends:       base >= 4.7 && < 5
                     , reflex
                     , reflex-dom
                     , text
                     , containers
  default-language:    Haskell2010
