name:                userValidation
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
maintainer:          meditans@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable userValidation
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom >= 0.4 && < 0.5
                     , containers
                     , text
                     , safe
                     , string-conv
                     , classy-prelude
                     , email-validate
  default-language:    Haskell2010