name:                mockServer
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable mockServer
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , mockAPI
                     , servant-server
                     , text
                     , warp
  default-language:    Haskell2010