name:                mockAPI
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MockAPI
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , text
                     , aeson
  default-language:    Haskell2010