name:                mockAPI
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MockAPI
                     , ExRoles
                     , GenericStructure
                     , Permissions
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , text
                     , aeson
                     , mtl
                     , containers
                     , lens
  default-language:    Haskell2010
