name:                mockAPI
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MockAPI
                     , MockAPI.Prelude
                     , GenericStructure
                     , MockAPI.Shaped
                     , MockAPI.Permission
                     , MockAPI.User
                     , MockAPI.RoleAttributes
                     , MockAPI.Roles
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , text
                     , aeson
                     , mtl
                     , containers
                     , lens
                     , digestive-functors
                     , email-validate
                     , string-conversions >= 0.4
  default-language:    Haskell2010
