name:                mockLoginPage
version:             0.1.0.0
license:             BSD3
maintainer:          meditans@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable mockClient
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Pages.Edit
                     , Pages.Overview
                     , Pages.Common
                     , Utils
  build-depends:       base >=4.9 && <4.10
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom >= 0.4 && < 0.5
                     , reflex-dom-contrib
                     , servant-reflex
                     , reflex-jsx
                     , safe
                     , string-conv
                     , classy-prelude
                     , email-validate
                     , mockAPI
                     , servant
                     , lens
                     , dependent-map
                     , dependent-sum
                     , digestive-functors
                     , template-haskell
                     , reflex-ui-elements
                     , servant-router
                     , web-routes
                     , uri-bytestring
                     , time
                     , transformers
                     , bytestring
                     , mtl
                     , text

  default-language:  Haskell2010
  if impl(ghcjs)
    ghc-options:    -dedupe
    cpp-options:    -DGHCJS_BROWSER
  else
    ghc-options: -Wall